@@ -2,6 +2,8 @@ next
 ----
   * Provide scripts to measure actual kernel and user space memory
     consumption in a QEMU-based VM
+  * Store the values from these scripts in a configuration file
+    which is then used by "kdumptool calibrate"
   * Building kdump initrd using a custom configuration file
 
 0.9.2
